[gd_scene load_steps=3 format=2]

[ext_resource path="res://side_panel.gd" type="Script" id=1]
[ext_resource path="res://avatars/default_avatar.png" type="Texture" id=2]

[node name="SidePanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 360, 1280 )
color = Color( 0.3655, 0.43, 0.3999, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer3" type="MarginContainer" parent="ColorRect/VBoxContainer"]
margin_right = 720.0
margin_bottom = 177.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.22

[node name="AccountButton" type="Button" parent="ColorRect/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
margin_right = 720.0
margin_bottom = 177.0
text = "Имя аккаунта"
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="ChatButton" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
margin_top = 181.0
margin_right = 720.0
margin_bottom = 231.0
rect_min_size = Vector2( 0, 50 )
text = "Название беседы"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/VBoxContainer"]
margin_top = 235.0
margin_right = 720.0
margin_bottom = 1043.0
size_flags_vertical = 3

[node name="OptionsButton" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
margin_top = 1047.0
margin_right = 720.0
margin_bottom = 1107.0
rect_min_size = Vector2( 0, 60 )
text = "Настройки"

[node name="ReportButton" type="Button" parent="ColorRect/VBoxContainer"]
unique_name_in_owner = true
margin_top = 1111.0
margin_right = 720.0
margin_bottom = 1171.0
rect_min_size = Vector2( 0, 60 )
size_flags_stretch_ratio = 2.0
disabled = true
text = "Составить рапорт"

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect/VBoxContainer"]
margin_top = 1175.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13

[connection signal="item_rect_changed" from="." to="." method="_on_SidePanel_item_rect_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ChatButton" to="." method="_on_ChatButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ReportButton" to="." method="_on_AboutButton_pressed"]
